[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "folium>=0.20.0",
    "pandas>=2.3.3",
    "plotly>=6.3.1",
    "streamlit-folium>=0.25.3",
    "streamlit>=1.50.0",
    "numpy>=2.3.3",
    "scikit-learn>=1.7.2",
    "matplotlib>=3.10.6",
    "seaborn>=0.13.2",
    "mlxtend>=0.23.4",
]
